# segrep-for-nn-semicrf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure
data_sample/cws/: cws.devel.seg  cws.devel.tag  cws.segemb.sample  cws.test.seg  cws.test.tag  cws.train.seg  cws.train.tag  giga.cbow.100.sample
data_sample/ner/: ner.devel.seg  ner.devel.tag  ner.segemb.sample  ner.test.seg  ner.test.tag  ner.train.seg  ner.train.tag  sskip.100.vector.sample
run/: cws_ncrf.test.sh  cws_ncrf.train.sh  cws_nlabeler.test.sh  cws_nlabeler.train.sh  cws_nsemicrf_sconcate.test.sh  cws_nsemicrf_sconcate.train.sh  cws_nsemicrf_srnn.test.sh  cws_nsemicrf_srnn.train.sh  ner_ncrf.test.sh  ner_ncrf.train.sh  ner_nlabeler.test.sh  ner_nlabeler.train.sh  ner_nsemicrf_sconcate.test.sh  ner_nsemicrf_sconcate.train.sh  ner_nsemicrf_sconcate_seg_wft.test.sh  ner_nsemicrf_sconcate_seg_wft.train.sh  ner_nsemicrf_sconcate_seg_woft.test.sh  ner_nsemicrf_sconcate_seg_woft.train.sh  ner_nsemicrf_srnn.test.sh  ner_nsemicrf_srnn.train.sh  ner_nsemicrf_srnn_seg_wft.test.sh  ner_nsemicrf_srnn_seg_wft.train.sh  ner_nsemicrf_srnn_seg_woft.test.sh  ner_nsemicrf_srnn_seg_woft.train.sh
scripts/: cws_label_eval.sh  cws_semicrf_eval.sh  ner_eval.sh  score  tags_to_word.py
src/: CMakeLists.txt  layer.cc  layer.h  logging.cc  logging.h  semi_crf_layer.cc  semi_crf_layer.h  training_utils.cc  training_utils.h  utils.cc  utils.h
src/crf/: CMakeLists.txt  crf.cc  crf.h  main.cc
src/labeler/: CMakeLists.txt  corpus.cc  corpus.h  main.cc  model.cc  model.h
src/sandbox/: CMakeLists.txt  main.cc
(+12 files in other folders)
